--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
     <div class="inner">
       <body>
         <img src="assets/artifact.jpg" alt="profile picture" class="profile-picture">
-        <div class="profile-name">huemin</div>
-        <a href="https://twitter.com/huemin_art" class="links">twitter</a>
-        <a href="https://discordapp.com/users/474070326192504842/" class="links">discord</a>
-        <a href="https://github.com/huemin-art" class="links">github</a>
-        <a href="https://objkt.com/profile/huemin/" class="links">objkt</a>
-        <a href="https://opensea.io/assets/mirage-gallery-curated?search[stringTraits][0][name]=artist&search[stringTraits][0][values][0]=Huemin&search[sortAscending]=true&search[sortBy]=PRICE" class="links">opensea</a>
+        <div class="profile-name">scndn</div>
+        <a href="https://huemin.art" class="links">art</a>
       </body>
     </div>
   </div>
