--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="middle">
     <div class="inner">
       <body>
-        <img src="assets/artifact.jpg" alt="profile picture" class="profile-picture">
+        <img src="assets/artifact.png" alt="profile picture" class="profile-picture">
         <div class="profile-name">scndn</div>
         <a href="https://huemin.art" class="links">art</a>
       </body>
