--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <body>
         <img src="assets/artifact.png" alt="profile picture" class="profile-picture">
         <div class="profile-name">scndn</div>
-        <a href="https://huemin.art" class="links">art</a>
+        <a href="https://huemin-art.github.io/" class="links">art</a>
       </body>
     </div>
   </div>
