--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-<title>huemin</title>
+<title>scndn</title>
 </head>
 <div class="outer">
   <div class="middle">
