--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img src="assets/artifact.jpg" alt="profile picture" class="profile-picture">
         <div class="profile-name">scndn</div>
         <a href="https://huemin-art.github.io/" class="links">huemin</a>
+        <a href="https://deforum.github.io/" class="links">deforum</a>
       </body>
     </div>
   </div>
