--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="profile-name">scndn</div>
         <a href="https://huemin-art.github.io/" class="links">huemin</a>
         <a href="https://deforum.github.io/" class="links">deforum</a>
+        <a href="https://scholar.google.com/citations?user=lMkb7ssAAAAJ&hl=en&oi=sra" class="research">deforum</a>
       </body>
     </div>
   </div>
