--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <body>
         <img src="assets/artifact.jpg" alt="profile picture" class="profile-picture">
         <div class="profile-name">scndn</div>
-        <a href="https://scholar.google.com/citations?user=lMkb7ssAAAAJ&hl=en&oi=sra" class="research">deforum</a>
+        <a href="https://scholar.google.com/citations?user=lMkb7ssAAAAJ&hl=en&oi=sra" class="links">research</a>
+        <a href="https://www.scondon.com/" class="links">scondon</a>
         <a href="https://huemin-art.github.io/" class="links">huemin</a>
         <a href="https://deforum.github.io/" class="links">deforum</a>
       </body>
